<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.srikanthpuram.samples.roomdatabaseapp.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/add_employee_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_employee"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/show_employees_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_employee"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/add_employee_btn"/>

    <Button
        android:id="@+id/update_employee_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_employee"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/show_employees_btn"/>

    <Button
        android:id="@+id/delete_employee_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_employee"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/update_employee_btn"/>

</RelativeLayout>
