<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.srikanthpuram.samples.roomdatabaseapp.AddEmployeeFragment">

    <TextView
        android:id="@+id/add_employee_title_tv"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold"
        android:hint="@string/add_employee"/>

    <EditText
        android:id="@+id/add_employee_id_edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/add_employee_title_tv"
        android:hint="@string/employee_id"
        android:inputType="numberSigned"
        android:maxLines="1"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/add_employee_name_edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/add_employee_id_edit"
        android:hint="@string/employee_name"
        android:maxLines="1"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/add_employee_designation_edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/add_employee_name_edit"
        android:hint="@string/employee_designation"
        android:maxLines="1"
        android:imeOptions="actionNext"/>

    <Button
        android:id="@+id/employee_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/add_employee_designation_edit"
        android:text="@string/add_employee"/>
</RelativeLayout>
